| Summary: | ASTERISK-22456: Logger.conf: Logging types ignored after specifying a verbose level | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2013-09-04 10:42:30 | Date Closed: | 2013-10-24 15:45:01 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Logging |
| Versions: | SVN 1.8.23.1 11.5.1 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In logger.conf if you set a level on verbose any type specified after that are not read.
Set the following in logger.conf: {noformat} console => notice,warning,error,verbose,debug {noformat} Issue a "logger show channels" on the CLI: {noformat} logger show channels Channel Type Status Configuration ------- ---- ------ ------------- /opt/asterisk/11/var/log/asterisk/m File Enabled - NOTICE WARNING ERROR Console Enabled - DEBUG NOTICE WARNING ERROR VERBOSE {noformat} Now add a level to verbose: {noformat} console => notice,warning,error,verbose(3),debug {noformat} Reload the logger and show: {noformat} *CLI> logger show channels Channel Type Status Configuration ------- ---- ------ ------------- /opt/asterisk/11/var/log/asterisk/m File Enabled - NOTICE WARNING ERROR Console Enabled - NOTICE WARNING ERROR VERBOSE {noformat} Debug is now missing. | ||
| Comments: | By: Rusty Newton (rnewton) 2013-09-04 19:44:10.042-0500 For reference, the documentation describing the syntax from logger.conf {noformat} ; Verbose takes an additional argument, in the form of an integer level. ; Messages with higher levels will be ignored. If verbose is specified at ; all, it will default to 3. {noformat} {noformat} ; error ; verbose(<level>) ; dtmf {noformat} | ||