main/logger.c
@@ -257,7 +257,6 @@ static unsigned int make_components(const char *s, int lineno, int *verbosity)
 			break;
 		} else if (!strncasecmp(w, "verbose(", 8) && sscanf(w + 8, "%d)", verbosity) == 1) {
 			res |= (1 << __LOG_VERBOSE);
-			break;
 		} else for (x = 0; x < ARRAY_LEN(levels); x++) {
 			if (levels[x] && !strcasecmp(w, levels[x])) {
 				res |= (1 << x);
